[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/gameplay/levels/level_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tower-defense-top-down/spritesheet/tower-defense_spritesheet.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/enemy_wave/enemy_wave.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy-commander/enemy-commander.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemy-call-button/enemy-call-button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/strategic-point.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gameplay/hit-area/hit-area.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemy_wave/enemy_group.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enemy_wave/enemy_waves_manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/fx/CoinParticles.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "tower-defense_spritesheet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 960, 768 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="NavigationPolygon" id=3]
vertices = PackedVector2Array( 1158.06, 585.444, 1155.07, 7.09753, 1382.81, 7.09753, 1394.8, 819.18, 857.394, 822.177, 1017.22, 585.444, 846.417, 390.664, 1010.22, 210.867, 654.633, 213.864, 816.45, 390.664, 648.64, 585.444, 803.455, 819.18, 207.129, 819.18, 441.874, 579.451, 205.141, 4.10095, 426.891, -1.89227 )
polygons = [ PackedInt32Array( 0, 1, 2, 3 ), PackedInt32Array( 0, 3, 4, 5 ), PackedInt32Array( 5, 4, 6, 7 ), PackedInt32Array( 8, 7, 6, 9 ), PackedInt32Array( 10, 8, 9, 11 ), PackedInt32Array( 10, 11, 12, 13 ), PackedInt32Array( 13, 12, 14, 15 ) ]
outlines = [ PackedVector2Array( 205.141, 4.10095, 426.891, -1.89227, 441.874, 579.451, 648.64, 585.444, 654.633, 213.864, 1010.22, 210.867, 1017.22, 585.444, 1158.06, 585.444, 1155.07, 7.09753, 1382.81, 7.09753, 1394.8, 819.18, 857.394, 822.177, 846.417, 390.664, 816.45, 390.664, 803.455, 819.18, 207.129, 819.18 ) ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PackedVector2Array( 0, 0, 0, 0, 297.584, 40.0603, 0, 0, 0, 0, 295.313, 348.712, 0, 0, 0, 0, 302.127, 672.346, 0, 0, 0, 0, 322.568, 711.302, 0, 0, 0, 0, 356.637, 735.275, 0, 0, 0, 0, 436.13, 741.268, 0, 0, 0, 0, 542.879, 741.268, 0, 0, 0, 0, 581.49, 714.298, 0, 0, 0, 0, 600.268, 661.447, 0, 0, 0, 0, 608.745, 540.495, 0, 0, 0, 0, 611.016, 438.61, 0, 0, 0, 0, 613.738, 297.769, 0, 0, 0, 0, 695.052, 288.779, 0, 0, 0, 0, 781.36, 297.769, 0, 0, 0, 0, 785.902, 438.61, 0, 0, 0, 0, 788.173, 537.498, 0, 0, 0, 0, 793.332, 661.447, 0, 0, 0, 0, 804.072, 711.302, 0, 0, 0, 0, 833.598, 747.261, 0, 0, 0, 0, 915.363, 741.268, 0, 0, 0, 0, 994.857, 744.265, 0, 0, 0, 0, 1038.01, 705.309, 0, 0, 0, 0, 1049.37, 645.376, 0, 0, 0, 0, 1044.82, 573.458, 0, 0, 0, 0, 1040.28, 378.678, 0, 0, 0, 0, 1035.74, 61.0366 )
}

[node name="level4" type="Node2D" groups=[
"Levels",
]]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PackedInt32Array( 0, 0, 65542, 1, 0, 65542, 2, 0, 65542, 3, 0, 65543, 4, 1610612736, 131076, 5, 1610612736, 131076, 6, 1610612736, 65543, 7, 0, 65542, 8, 0, 65542, 9, 0, 65542, 10, 0, 65542, 11, 0, 65542, 12, 0, 65542, 13, 0, 65542, 14, 0, 65542, 15, 0, 65542, 16, 0, 65542, 17, 0, 65542, 18, 0, 65543, 19, 1610612736, 131076, 20, 1610612736, 131076, 21, 1610612736, 65543, 22, 0, 65542, 23, 0, 65542, 24, 0, 65542, 65536, 0, 65542, 65537, 0, 65542, 65538, 0, 65542, 65539, 0, 65543, 65540, 1610612736, 131076, 65541, 1610612736, 131076, 65542, 1610612736, 65543, 65543, 0, 65542, 65544, 0, 65542, 65545, 0, 65542, 65546, 0, 65542, 65547, 0, 65542, 65548, 0, 65542, 65549, 0, 65542, 65550, 0, 65542, 65551, 0, 65542, 65552, 0, 65542, 65553, 0, 65542, 65554, 0, 65543, 65555, 1610612736, 131076, 65556, 1610612736, 131076, 65557, 1610612736, 65543, 65558, 0, 65542, 65559, 0, 65542, 65560, 0, 65542, 131072, 0, 65542, 131073, 0, 65542, 131074, 0, 65542, 131075, 0, 65543, 131076, 1610612736, 131076, 131077, 1610612736, 131076, 131078, 1610612736, 65543, 131079, 0, 65542, 131080, 0, 65542, 131081, 0, 65542, 131082, 0, 65542, 131083, 0, 65542, 131084, 0, 65542, 131085, 0, 65542, 131086, 0, 65542, 131087, 0, 65542, 131088, 0, 65542, 131089, 0, 65542, 131090, 0, 65543, 131091, 1610612736, 131076, 131092, 1610612736, 131076, 131093, 1610612736, 65543, 131094, 0, 65542, 131095, 0, 65542, 131096, 0, 65542, 196608, 0, 65542, 196609, 0, 65542, 196610, 0, 524291, 196611, 0, 65543, 196612, 1610612736, 131076, 196613, 1610612736, 131076, 196614, 1610612736, 65543, 196615, 0, 65542, 196616, 0, 65542, 196617, 0, 65542, 196618, -1610612736, 65544, 196619, 1610612736, 6, 196620, 1610612736, 6, 196621, 1610612736, 6, 196622, 1610612736, 6, 196623, 1610612736, 65544, 196624, 0, 65542, 196625, 0, 65542, 196626, 0, 65543, 196627, 1610612736, 131076, 196628, 1610612736, 131076, 196629, 1610612736, 65543, 196630, 0, 524291, 196631, 0, 65542, 196632, 0, 65542, 262144, 0, 65542, 262145, 0, 65542, 262146, 0, 65542, 262147, 0, 65543, 262148, 1610612736, 131076, 262149, 1610612736, 131076, 262150, 1610612736, 65543, 262151, 0, 65542, 262152, 0, 65542, 262153, 0, 65542, 262154, -1610612736, 6, 262155, 0, 131076, 262156, 0, 131076, 262157, 0, 131076, 262158, 0, 131076, 262159, -1073741824, 6, 262160, 0, 65542, 262161, 0, 65542, 262162, 0, 65543, 262163, 1610612736, 131076, 262164, 1610612736, 131076, 262165, 1610612736, 65543, 262166, 0, 65542, 262167, 0, 65542, 262168, 0, 65542, 327680, 0, 65542, 327681, 0, 524291, 327682, 0, 65542, 327683, 0, 65543, 327684, 1610612736, 131076, 327685, 1610612736, 131076, 327686, 1610612736, 65543, 327687, 0, 65542, 327688, 0, 65542, 327689, 0, 65542, 327690, -1610612736, 6, 327691, 0, 131076, 327692, 0, 131076, 327693, 0, 131076, 327694, 0, 131076, 327695, -1073741824, 6, 327696, 0, 65542, 327697, 0, 65542, 327698, 0, 65543, 327699, 1610612736, 131076, 327700, 1610612736, 131076, 327701, 1610612736, 65543, 327702, 0, 65542, 327703, 0, 524291, 327704, 0, 65542, 393216, 0, 65542, 393217, 0, 65542, 393218, 0, 65542, 393219, 0, 65543, 393220, 1610612736, 131076, 393221, 1610612736, 131076, 393222, 1610612736, 65543, 393223, 0, 65542, 393224, 0, 65542, 393225, 0, 65542, 393226, -1610612736, 6, 393227, 1610612736, 131076, 393228, -1073741824, 6, 393229, -1610612736, 6, 393230, 0, 131076, 393231, -1073741824, 6, 393232, 0, 65542, 393233, 0, 65542, 393234, 0, 65543, 393235, 1610612736, 131076, 393236, 1610612736, 131076, 393237, 1610612736, 65543, 393238, 0, 65542, 393239, 0, 65542, 393240, 0, 65542, 458752, 0, 524291, 458753, 0, 65542, 458754, 0, 65542, 458755, 0, 65543, 458756, 1610612736, 131076, 458757, 1610612736, 131076, 458758, 1610612736, 65543, 458759, 0, 65542, 458760, 0, 65542, 458761, 0, 65542, 458762, -1610612736, 6, 458763, 1610612736, 131076, 458764, -1073741824, 6, 458765, -1610612736, 6, 458766, 0, 131076, 458767, -1073741824, 6, 458768, 0, 65542, 458769, 0, 65542, 458770, 0, 65543, 458771, 1610612736, 131076, 458772, 1610612736, 131076, 458773, 1610612736, 65543, 458774, 0, 65542, 458775, 0, 65542, 458776, 0, 524291, 524288, 0, 65542, 524289, 0, 65542, 524290, 0, 65542, 524291, 0, 65543, 524292, 1610612736, 131076, 524293, 1610612736, 131076, 524294, 1610612736, 65543, 524295, 0, 65542, 524296, 0, 65542, 524297, 0, 65542, 524298, -1610612736, 6, 524299, 1610612736, 131076, 524300, -1073741824, 6, 524301, -1610612736, 6, 524302, 0, 131076, 524303, -1073741824, 6, 524304, 0, 65542, 524305, 0, 65542, 524306, 0, 65543, 524307, 1610612736, 131076, 524308, 1610612736, 131076, 524309, 1610612736, 65543, 524310, 0, 65542, 524311, 0, 65542, 524312, 0, 65542, 589824, 0, 65542, 589825, 0, 65542, 589826, 0, 65542, 589827, 0, 65543, 589828, 1610612736, 131076, 589829, 1610612736, 131076, 589830, 1610612736, 7, 589831, 1610612736, 6, 589832, 1610612736, 6, 589833, 1610612736, 6, 589834, -1610612736, 7, 589835, 1610612736, 131076, 589836, -1073741824, 6, 589837, -1610612736, 6, 589838, 0, 131076, 589839, 0, 131077, 589840, 1610612736, 6, 589841, 1610612736, 6, 589842, -1073741824, 131077, 589843, 1610612736, 131076, 589844, 1610612736, 131076, 589845, 1610612736, 65543, 589846, 0, 65542, 589847, 0, 65542, 589848, 0, 65542, 655360, 0, 65542, 655361, 0, 65542, 655362, 0, 65542, 655363, 0, 65543, 655364, 1610612736, 131076, 655365, 1610612736, 131076, 655366, 1610612736, 131076, 655367, 1610612736, 131076, 655368, 1610612736, 131076, 655369, 1610612736, 131076, 655370, 1610612736, 131076, 655371, 1610612736, 131076, 655372, -1073741824, 6, 655373, -1610612736, 6, 655374, 0, 131076, 655375, 0, 131076, 655376, 0, 131076, 655377, 0, 131076, 655378, 0, 131076, 655379, 1610612736, 131076, 655380, 1610612736, 131076, 655381, 1610612736, 65543, 655382, 0, 65542, 655383, 0, 65542, 655384, 0, 65542, 720896, 0, 65542, 720897, 0, 524291, 720898, 0, 65542, 720899, 0, 65543, 720900, 1610612736, 131076, 720901, 1610612736, 131076, 720902, 1610612736, 131076, 720903, 1610612736, 131076, 720904, 1610612736, 131076, 720905, 1610612736, 131076, 720906, 1610612736, 131076, 720907, 1610612736, 131076, 720908, -1073741824, 6, 720909, -1610612736, 6, 720910, 0, 131076, 720911, 0, 131076, 720912, 0, 131076, 720913, 0, 131076, 720914, 1610612736, 131076, 720915, 1610612736, 131076, 720916, 1610612736, 131076, 720917, 1610612736, 65543, 720918, 0, 65542, 720919, 0, 524291, 720920, 0, 65542, 786432, 0, 65542, 786433, 0, 65542, 786434, 0, 65542, 786435, -1610612736, 65545, 786436, 0, 6, 786437, 0, 6, 786438, 0, 6, 786439, 0, 6, 786440, 0, 6, 786441, 0, 6, 786442, 0, 6, 786443, 0, 6, 786444, 1610612736, 8, 786445, -1073741824, 8, 786446, 0, 6, 786447, 0, 6, 786448, 0, 6, 786449, 0, 6, 786450, 0, 6, 786451, 0, 6, 786452, 0, 6, 786453, 1610612736, 8, 786454, 0, 65542, 786455, 0, 65542, 786456, 0, 65542, 851968, 0, 65542, 851969, 0, 65542, 851970, 0, 65542, 851971, 0, 65542, 851972, 0, 65542, 851973, 0, 65542, 851974, 0, 65542, 851975, 0, 65542, 851976, 0, 65542, 851977, 0, 65542, 851978, 0, 65542, 851979, 0, 65542, 851980, 0, 65542, 851981, 0, 65542, 851982, 0, 65542, 851983, 0, 65542, 851984, 0, 65542, 851985, 0, 65542, 851986, 0, 65542, 851987, 0, 65542, 851988, 0, 65542, 851989, 0, 65542, 851990, 0, 65542, 851991, 0, 65542, 851992, 0, 65542 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyCommander" parent="." instance=ExtResource( 4 )]
wave_manager_path = NodePath("../WaveManager")
call_button_path = NodePath("../EnemyCallButton")

[node name="WaveManager" parent="." instance=ExtResource( 9 )]

[node name="EnemyWave" parent="WaveManager" instance=ExtResource( 3 )]

[node name="EnemyGroup" parent="WaveManager/EnemyWave" instance=ExtResource( 8 )]
num_of_enemies = 3

[node name="HitArea" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]

[node name="Node2D" type="Node2D" parent="."]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Node2D"]
navpoly = SubResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -85.5978, 0 )
scale = Vector2( 1.31937, 1 )
curve = SubResource( 2 )

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="EnemyCallButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 220.617, 362.039 )

[node name="StrategicPoint" parent="." instance=ExtResource( 6 )]
position = Vector2( 550, 490 )

[node name="StrategicPoint2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1084.17, 490 )

[node name="Details" type="Node2D" parent="."]

[node name="GPUParticles2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 0, 0 )
[connection signal="last_enemy_in_actual_wave_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_in_actual_wave_spawned"]
[connection signal="last_enemy_spawned" from="WaveManager" to="." method="_on_WaveManager_last_enemy_spawned"]
[connection signal="last_wave" from="WaveManager" to="." method="_on_WaveManager_last_wave"]
[connection signal="spawn_enemy" from="WaveManager" to="." method="_on_WaveManager_spawn_enemy"]
